--- a/index.html
+++ b/index.html
@@ -1,45 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <title>All My Tools</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet/less" type="text/css" href="styles.less" />
 </head>
+
 <body>
-    <header>
-        menu
-        <h1>All My Tools</h1>
-    </header>
-    <main>
-        <section id="gradient">
-            <div id="gradient-content">
-                <h2>Every tool you going to need in just a place!</h2>
+    <div id="header">
+        <header>
+            <h1><a href="./index.html">All My Tools</a></h1>
+        </header>
+        <div id="gradient">
+            <div id="subtitle-container">
+                <h2>Every tool you need in a single place!</h2>
             </div>
-        </section>
-        <section>
-            <form id="search">
-                <input placeholder="Search tool" type="text" class="search-input" required="">
-            </form>
- 
+        </div>
+    </div>
+    <main>
+
+        <form id="search-bar">
+            <input placeholder="Search tool" type="text" class="search-input" required="" name="tool">
+        </form>
+
+        <section id="cards">
             <div class="tool-card">
-                <div class="title-tool-card">
-                    <img class="tool-img" src="./assets/61088.png">
-                    <h3>Tool 1</h3>
+                <div class="title-and-image">
+                    <img class="img-tool-card" src="./assets/61088.png">
+                    <h3 class="name-tool-card">Tool 1 </h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div> 
-            </form>
- 
+                <p class="description-tool-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </div>
+
             <div class="tool-card">
-                <div class="title-tool-card">
-                    <img class="tool-img" src="./assets/61088.png">
-                    <h3>Tool 1</h3>
+                <div class="title-and-image">
+                    <img class="img-tool-card" src="./assets/61088.png">
+                    <h3 class="name-tool-card">Toooool tool toll 2 </h3>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="description-tool-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
+            </div>
+
+            <div class="tool-card">
+                <div class="title-and-image">
+                    <img class="img-tool-card" src="./assets/61088.png">
+                    <h3 class="name-tool-card">Here will be placed another tool (tool 3) </h3>
+                </div>
+                <p class="description-tool-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.</p>
             </div>
         </section>
     </main>
+    <footer>
+        <section id="what-is-amt">
+            <div class="title-and-image">
+                <img src="./assets/61088.png">
+                <h3 class="name-tool-card">All My Tools </h3>
+            </div>
+            <p>All My Tools is a free and open-source toolbox with almost everything you need in just a place. Give it a try!</p>
+        </section>
+        <aside>
+            <h3>Community and Support</h3>
+            <ul>
+                <li><a href="#ContactUs">Contact Us</a></li>
+                <li><a href="#NewToolIdea">Need a new tool?</a></li>
+                <li><a href="#GitHubRep">GitHub Repository</a></li>
+            </ul>
+        </aside>
+        <aside>
+            <h3>Follow the creator!</h3>
+            <ul>
+                <li><a href="#GitHub">GitHub</a></li>
+                <li><a href="#NewToolIdea">Instagram</a></li>
+                <li><a href="#NewToolIdea">Twitter</a></li>
+            </ul>
+        </aside>
+        <hr>
+        <div id="license">
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">All My Tools is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></a>.
+        </div>
+    </footer>
 </body>
+
 </html>
